2005-06-17  Moritz Schulte  <moritz@g10code.com>

	* global.c (gcry_xstrdup): Removed superfluous strcpy call.

2005-06-16  Werner Koch  <wk@g10code.com>

	* sexp.c (normalize): Made P unsigned.
	(gcry_sexp_nth_data): Cast return value to char*.
	(sexp_sscan): Fixed sign/usnigned conflicts.
	(whitespacep): Changed arg to char*.
	(unquote_string): Changed arg STRING to char*.

	* gcrypt-module.h (gcry_cipher_register): Changed arg ALGORITHM_ID
	from unsigned int * to int*.

	* gcrypt.h (gcry_mpi_scan): Changed arg BUFFER from unsigned char*
	to void*.

2005-06-15  Werner Koch  <wk@g10code.com>

	* gcrypt.h, sexp.c (gcry_sexp_sprint): Changed arg BUFFER from
	char* to void*.
	* gcrypt.h (gcry_md_ctl): Changed arg BUFFER from unsigned char*
	to void*.
	(gcry_randomize): Ditto.
	(gcry_create_nonce): Ditto.
	(gcry_cipher_encrypt, gcry_cipher_decrypt): Changed args IN and
	OUT from unsigned char* to void*.

2005-04-16  Moritz Schulte  <moritz@g10code.com>

	* g10lib.h (_gcry_ac_init): Declare.
	* global.c (global_init): Call _gcry_ac_init; don't forget to set err.

2005-04-14  Werner Koch  <wk@g10code.com>

	* sexp.c (whitespacep): New.
	(sexp_sscan): Replace isdigit and isspace by whitespacep and
	digitp.

2005-02-22  Werner Koch  <wk@g10code.com>

	* global.c (_gcry_malloc): Make sure ERRNO is set if we return
	NULL.  Remove unneeded initialization of M to allow the compiler
	to catch errors.
	(gcry_realloc): Make sure ERRNO is set if we return NULL.

2005-01-05  Werner Koch  <wk@g10code.com>

	* gcrypt.h: Added GCRYCTL_FAST_POLL.
	(gcry_fast_random_poll): New.
	* global.c (gcry_control) <FAST_POLL>: New.

2004-12-20  Werner Koch  <wk@g10code.com>

	* gcrypt.h (GCRY_THREAD_OPTION_PTH_IMPL): Tweaks for W32.

2004-12-06  Werner Koch  <wk@g10code.com>

	* g10lib.h (stpcpy, strcasecmp): Prefix them with _gcry_ and add
	macros to define them to the real name.  This is needed to avoid
	double symbols when using static linkage.
	* missing-string.c: Likewise.