@@ -1,3 +1,8 @@
+2006-06-21  Werner Koch  <wk@g10code.com>
+
+	* global.c (gcry_xcalloc, gcry_xcalloc_secure): made safe against
+	integer overflow.
+
 2005-06-17  Moritz Schulte  <moritz@g10code.com>
 
 	* global.c (gcry_xstrdup): Removed superfluous strcpy call.
